# fhtml

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SPEC.md  llms.md
.github/workflows/: npm-publish.yml  pages.yml  vscode-publish.yml
bench/: README.md  RESULTS.md  cheatsheet-components.md  cheatsheet-microparts.md  cheatsheet.md  gen_legend.py  generate.py  microparts_assemble.py  pug_emit.py  run.py  shorthand-legend.md  shorthand_economics.py  tailwind_scan.sh  test_microparts.py  tokens.py
bench/corpus/: activity-feed.html  blog-cards.html  breadcrumbs.html  calendar-month.html  cart-panel.html  category-filters.html  chat-thread.html  checkout-form.html  cookie-banner.html  cta-band.html  dashboard-stats.html  data-table.html  description-list.html  error-404.html  faq-accordion.html  feature-grid.html  file-dropzone.html  footer-columns.html  hero-split.html  invoice.html  kanban-board.html  login-form.html  logo-cloud.html  modal-dialog.html  navbar-marketing.html  newsletter-signup.html  notifications.html  order-history.html  order-summary.html  pagination.html  pricing-tiers.html  product-detail.html  product-grid.html  progress-steps.html  promo-banner.html  quick-view.html  reviews-section.html  settings-form.html  sidebar-nav.html  slide-over.html  (+8 more)
editors/vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  (+5 more)
integrations/npm/crate/: Cargo.toml
integrations/npm/crate/src/: lib.rs
site/: build.sh  changelog.fhtml  data.json  docs.fhtml  index.fhtml  input.css  install.fhtml  llms.txt
src/: analyze.rs  convert.rs  emit.rs  error.rs  expr.rs  fmt.rs  jsgen.rs  json.rs  lib.rs  lsp.rs  main.rs  parser.rs  resolve.rs  shorthand.rs  vfs.rs
tests/: analyze.rs  convert.rs  jsgen.rs  lsp.rs  spec.rs  vfs.rs
(+57 files in other folders)
