[package]
name = "fhtml"
version = "0.3.0"
edition = "2021"
description = "Compiler for fhtml (Fluid HTML) — a token-cheap, Tailwind-native markup language"
license = "MIT"
repository = "https://github.com/nft/fhtml"
readme = "README.md"
keywords = ["html", "template", "markup", "tailwind", "compiler"]
categories = ["template-engine", "web-programming", "command-line-utilities"]
default-run = "fhtml"
# Keep the crate lean: benchmark corpus, site, docs, and editor tooling stay in the repo.
include = ["/src", "/Cargo.toml", "/README.md", "/SPEC.md", "/LICENSE"]

[lib]
name = "fhtml"
path = "src/lib.rs"

[[bin]]
name = "fhtml"
path = "src/main.rs"

[[bin]]
name = "html2fhtml"
path = "src/bin/html2fhtml.rs"
required-features = ["convert"]

[dependencies]
html5ever = { version = "0.39", optional = true }
markup5ever_rcdom = { version = "0.39.0", optional = true }

[features]
convert = ["dep:html5ever", "dep:markup5ever_rcdom"]
